fix: permitir null en liquidityScore, creditScore y riskScore en DashboardData
- Actualizar tipo DashboardData.metrics para aceptar number | null
- Excluir scripts/run-jobs-production.ts del build de TypeScript
- Corrige error de tipo en Vercel build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     "node_modules",
     "apps/web",
     "scripts/ingest-all-missing.ts",
-    "scripts/test-missing-indicators.ts"
+    "scripts/test-missing-indicators.ts",
+    "scripts/run-jobs-production.ts"
   ]
 }
