feat: soporte completo para Turso con funciones async
- Actualizar funciones de lectura para funcionar con Turso (async)
- getSeriesObservations, getSeriesFrequency ahora son async
- getAllLatestFromDBWithPrev ahora es async
- Actualizar domain/diagnostic.ts para usar await
- Las funciones detectan automáticamente si usan Turso o better-sqlite3

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test:notifs": "bash scripts/test_notifications.sh"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@radix-ui/react-slot": "^1.0.2",
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.0",
