--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
     "apps/web",
     "scripts/ingest-all-missing.ts",
     "scripts/test-missing-indicators.ts",
-    "scripts/run-jobs-production.ts"
+    "scripts/run-jobs-production.ts",
+    "backup-dashboard-*"
   ]
 }
