--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,9 +38,7 @@
   "exclude": [
     "node_modules",
     "apps/web",
-    "scripts/ingest-all-missing.ts",
-    "scripts/test-missing-indicators.ts",
-    "scripts/run-jobs-production.ts",
+    "scripts/**/*.ts",
     "backup-dashboard-*"
   ]
 }
