--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "schedule": "0 6 * * *"
     },
     {
+      "path": "/api/jobs/transform/indicators",
+      "schedule": "30 6 * * *"
+    },
+    {
       "path": "/api/jobs/ingest/european",
       "schedule": "0 7 * * *"
     },
@@ -13,16 +17,20 @@
       "schedule": "0 8 * * *"
     },
     {
-      "path": "/api/jobs/correlations",
+      "path": "/api/jobs/daily/calendar",
+      "schedule": "0 8 * * *"
+    },
+    {
+      "path": "/api/jobs/ingest/assets",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/jobs/correlations",
+      "schedule": "30 9 * * *"
     },
     {
       "path": "/api/jobs/compute/bias",
       "schedule": "0 10 * * *"
-    },
-    {
-      "path": "/api/jobs/daily/calendar",
-      "schedule": "0 8 * * *"
     },
     {
       "path": "/api/jobs/weekly",
