Restore crons in vercel.json and update security to support CRON_SECRET
- Restore 9 cron jobs in vercel.json (official Vercel method)
- Update security functions to accept CRON_SECRET (Vercel official), INGEST_KEY, and CRON_TOKEN
- Vercel automatically adds Authorization: Bearer ${CRON_SECRET} to cron requests
- Remove dependency on schedule.json files (Vercel doesn't use them)

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "crons": []
+  "crons": [
+    { "path": "/api/jobs/ingest/fred", "schedule": "0 6 * * *" },
+    { "path": "/api/jobs/transform/indicators", "schedule": "30 6 * * *" },
+    { "path": "/api/jobs/ingest/european", "schedule": "0 7 * * *" },
+    { "path": "/api/jobs/ingest/calendar", "schedule": "0 8 * * *" },
+    { "path": "/api/jobs/daily/calendar", "schedule": "0 8 * * *" },
+    { "path": "/api/jobs/ingest/assets", "schedule": "0 9 * * *" },
+    { "path": "/api/jobs/correlations", "schedule": "30 9 * * *" },
+    { "path": "/api/jobs/compute/bias", "schedule": "0 10 * * *" },
+    { "path": "/api/jobs/weekly", "schedule": "0 18 * * 0" }
+  ]
 }
 
 
