Reconfig: Migrate Eurozone/USA from TradingEconomics to Eurostat/ECB/FRED
BREAKING CHANGES:
- TradingEconomics: Only for FREE plan countries (Sweden, Mexico, NZ, Thailand)
- USA: All indicators from FRED only (removed TE for PMI)
- Eurozone: Migrated to Eurostat API (GDP, Industrial Production, Retail Sales) and ECB SDW (HICP, Unemployment, ECB Rate)
- PMI Eurozone: Using FRED Business Confidence Indicators as alternative

New adapters:
- lib/datasources/eurostat.ts: Eurostat API adapter (nama_10_gdp, sts_inpr_m, sts_trtu_m)
- lib/datasources/investing.ts: Placeholder for Investing.com (not implemented, using FRED alternative)

Updated:
- config/european-indicators.json: Removed TE, added Eurostat sources
- app/api/jobs/ingest/european/route.ts: Support for 'eurostat' source, removed TE
- app/api/jobs/ingest/fred/route.ts: Removed TE for PMI USA (Alpha Vantage only)
- app/api/jobs/ingest/pmi/route.ts: Removed TE, Alpha Vantage only
- lib/correlations/fetch.ts: Expanded Yahoo Finance mapping (USDCHF, DAX, CAC, FTSE, CL=F, BZ=F, SI=F)
- config/assets.config.json: Added commodities section (CL=F, BZ=F)

Correlations:
- All correlations now prioritize Yahoo Finance
- Expanded symbol mapping for FX majors, indices, commodities, crypto
- Database-first approach with Yahoo Finance fallback

--- a/config/assets.config.json
+++ b/config/assets.config.json
@@ -56,6 +56,11 @@
     { "symbol": "XPDUSD", "name": "Palladium / US Dollar", "yahoo_symbol": "PA=F" },
     { "symbol": "XPTUSD", "name": "Platinum / US Dollar", "yahoo_symbol": "PL=F" }
   ],
+  "commodities": [
+    { "symbol": "CL", "name": "Crude Oil WTI", "yahoo_symbol": "CL=F" },
+    { "symbol": "BZ", "name": "Brent Crude", "yahoo_symbol": "BZ=F" },
+    { "symbol": "NG", "name": "Natural Gas", "yahoo_symbol": "NG=F" }
+  ],
   "crypto": [
     { "symbol": "BTCUSDT", "name": "Bitcoin", "coinmarketcap_id": "1" },
     { "symbol": "ETHUSDT", "name": "Ethereum", "coinmarketcap_id": "1027" },
