--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test:notifs": "bash scripts/test_notifications.sh",
     "test:db": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/test-db.ts",
     "verify:data": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/verify-data.ts",
-    "verify:local": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/verificar-local-completo.ts"
+    "verify:local": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/verificar-local-completo.ts",
+    "db:migrate:turso": "tsx scripts/migrate-turso.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
