feat: Implementación completa USPMI con importación manual
- ✅ Script de importación manual desde CSV (scripts/import-uspmi-manual.ts)
- ✅ 72 observaciones importadas (2020-01 → 2025-12)
- ✅ Metadata actualizada: source='MANUAL_ISM', update='manual'
- ✅ Dashboard funcionando: pmi_mfg = 49.8 (2025-12-01)
- ✅ Cobertura US: 15/15 indicadores (100%)

Documentación:
- docs/USPMI-IMPORTACION-MANUAL.md - Guía completa
- docs/NOTA-USPMI-MANUAL.md - Nota rápida
- docs/RESUMEN-IMPLEMENTACION-USPMI.md - Resumen ejecutivo
- docs/ESTADO-FINAL-USPMI.md - Estado final
- docs/CHECKLIST-CIERRE-USPMI.md - Checklist verificación
- docs/README_SOURCES.md - Actualizado con nota USPMI

Código:
- lib/sources.ts - Metadata USPMI actualizada
- data/manual/USPMI.csv - Datos históricos (2020-2025)
- data/manual/USPMI.csv.example - Ejemplo formato
- data/manual/README.md - Documentación directorio

Plan migración futura:
- Trading Economics ya implementado y listo
- Sin deuda técnica
- Migración automática cuando API key esté disponible

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ backups
 *.db-*
 *.tsbuildinfo
 .DS_Store
+
+# Manual data imports (keep examples, ignore real data)
+data/manual/*.csv
+!data/manual/*.example
+!data/manual/README.md
