--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     { "path": "/api/jobs/ingest/fred", "schedule": "0 6 * * *" },
     { "path": "/api/jobs/transform/indicators", "schedule": "30 6 * * *" },
     { "path": "/api/jobs/ingest/european", "schedule": "0 7 * * *" },
-    { "path": "/api/jobs/ingest/calendar", "schedule": "0 8 * * *" },
+    { "path": "/api/jobs/ingest/calendar", "schedule": "0 * * * *" },
     { "path": "/api/jobs/daily/calendar", "schedule": "0 8 * * *" },
     { "path": "/api/jobs/ingest/assets", "schedule": "0 9 * * *" },
     { "path": "/api/jobs/correlations", "schedule": "30 9 * * *" },
