--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "csv-parse": "^6.1.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "ical.js": "^2.2.1",
     "lucide-react": "^0.460.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.5",
