--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@libsql/client": "^0.15.15",
     "@radix-ui/react-slot": "^1.0.2",
     "better-sqlite3": "^12.4.1",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
