--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "csv-parse": "^6.1.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "ical.js": "^2.2.1",
     "lucide-react": "^0.460.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.5",
+    "node-ical": "^0.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
