--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "verify:data": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/verify-data.ts",
     "verify:local": "NODE_OPTIONS=\"--conditions=react-server\" tsx scripts/verificar-local-completo.ts",
     "db:migrate:turso": "tsx scripts/migrate-turso.ts",
-    "test:calendar": "tsx scripts/test-calendar-providers.ts"
+    "test:calendar": "tsx scripts/test-calendar-providers.ts",
+    "validate:qa": "tsx scripts/validate-dashboard-qa.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
